# hockey-card-pricer

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  tests_test.db
backend/app/: main.py
backend/app/auth/: supabase_auth.py
backend/app/db/: database.py  db_get.py  init_db.py  model.py  schemas.py
backend/app/scripts/: card_detection.py  helpers.py  pricing.py  text_detection.py
backend/app/utils/: s3_images.py  s3_models.py
backend/db/: database.py  db_get.py  init_db.py  model.py
backend/scripts/: card_detection.py  helpers.py  pricing.py  text_detection.py
backend/tests/: conftest.py  test_api.py  test_confirm_card.py  test_flow.py  test_list_search.py  test_permissions.py  test_price.py  test_saved_cards.py  test_validation.py
backend/utils/: s3_models.py
backend/yolo/: analysis.py  coco_to_yolo.py  data_prep.py  standardize.py
frontend/: .gitignore  app.json  babel.config.js  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: App.tsx  _layout.tsx  index.tsx
frontend/app/(auth)/: _layout.tsx  login.tsx  signup.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  saved.tsx  search.tsx
frontend/app/camera/: _layout.tsx  capture.tsx  confirm.tsx  staging.tsx  verify_text.tsx
frontend/auth/: supabase.tsx
frontend/components/: SearchBar.tsx
frontend/lib/: api.ts
yolo/: analysis.py  coco_to_yolo.py
yolo/dataset/: card.yaml
(+3 files in other folders)
