[project]
name = "hockey-card-pricer"
version = "1.0.0"
description = "TODO"
readme = "../README.md"
requires-python = ">=3.10.0"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

exclude = [
  "venv",
  ".venv",
  "env",
  "__pycache__",
  "models",
  "uploads",
  "yolo"
]

[tool.ruff.lint]
select = ["E", "F", "I"]